--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./public/Navbar/B.svg" />
+    <link rel="icon" type="image/svg+xml" href="./Navbar/B.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blife-Roberto Martínez-Prueba</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
